added bearer config settings
